<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondolr"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registro"
        android:layout_marginTop="85dp"
        android:textSize="30sp"
        android:textColor="#015e86"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_usertv"
            android:textColor="#545454"
            android:textSize="20sp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_ruser"
            android:textColor="#545454"
            android:hint="@string/Login_userev"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_conttv"
            android:textSize="20dp"
            android:textColor="#545454"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:id="@+id/txt_rpass"
            android:inputType="textPassword"
            android:hint="@string/Login_contev"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/Login_contconf"
            android:textSize="20dp"
            android:textColor="#545454"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:id="@+id/txt_rpasscon"
            android:inputType="textPassword"
            android:hint="@string/Login_contev"
            />
    </LinearLayout>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_user1"
            android:textColor="#545454"
            android:layout_marginLeft="75dp"
        />
        <RadioButton android:id="@+id/radio_2"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#545454"
            android:layout_height="wrap_content"
            android:text="@string/rb_user2"
        />
    </RadioGroup>
    <Button
        android:id="@+id/button3"
        android:onClick="custionario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reg_button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_personalizado1"
        />

</LinearLayout>