<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondolr"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginTop="85dp"
        android:textSize="30sp"
        android:textColor="#015e86"
        android:layout_gravity="center"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_usertv"
            android:textColor="#545454"
            android:textSize="20sp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_marginLeft="45dp"
            android:id="@+id/txtuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:hint="@string/Login_userev"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login_conttv"
            android:textColor="#545454"
            android:textSize="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/txtpass"
            android:textColor="#545454"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Login_contev"
            />
    </LinearLayout>
    <Button
        android:id="@+id/buttonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_button"
        android:onClick="Ingreso"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#1b4a9b"
         />


</LinearLayout>