<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondoregg"
    tools:context=".Principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/reg_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_et1"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp" />
        <TextView
            android:id="@+id/txtspin_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:background="#FFFF"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"
            />
        <Spinner
            android:id="@+id/spin_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            
            android:layout_marginRight="20dp"
            />
        <TextView
            android:id="@+id/reg_p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_et3"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="#545454"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"
            android:id="@+id/txt_peso"
            android:layout_centerInParent="true"
            android:background="@android:drawable/editbox_background"
            android:inputType="numberDecimal"
            />
        <TextView
            android:id="@+id/reg_p5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_et5"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_discapacidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawablePadding="16dp"
                android:hint="Selecciona una opcion"
                android:padding="12dp"
                android:textColor="#545454" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/reg_p7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFF"
                android:textSize="15sp"
                android:layout_marginLeft="10dp" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calender"
                android:layout_marginLeft="10dp"
                android:id="@+id/btn_fecha1"
                android:background="@drawable/ic_baseline_calendar_month_24"
                android:textSize="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="#545454"
            android:layout_marginLeft="10dp"
            android:textSize="15dp"
            android:layout_marginRight="20dp"
            android:id="@+id/txt_fecha1"
            android:layout_centerInParent="true"
            android:background="@android:drawable/editbox_background"
            />
        <TextView
            android:id="@+id/reg_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_et2"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="#545454"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/txt_edad"
            android:layout_centerInParent="true"
            android:background="@android:drawable/editbox_background"
            />
        <TextView
            android:id="@+id/reg_p4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_et4"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_enfermedades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:drawablePadding="16dp"
                android:hint="Selecciona una opcion"
                android:padding="12dp"
                android:textColor="#545454" />
        </RelativeLayout>

        <TextView
            android:id="@+id/reg_p6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_et6"
            android:textColor="#FFFF"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txtspin_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"
            />
        <Spinner
            android:id="@+id/spin_vacu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/reg_p6.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_et6.1"
            android:textColor="#FFFF"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/txtspin_vr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"
            />
        <Spinner
            android:id="@+id/spin_vacu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/reg_p9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/reg_et9"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:id="@+id/txt_ndosis"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:background="@android:drawable/editbox_background"
            android:inputType="number"/>
        <TextView
            android:id="@+id/reg_p10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/reg_et10"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/txtspin_var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:layout_marginLeft="10dp"
            android:visibility="invisible"
            />
        <Spinner
            android:id="@+id/spin_var"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/reg_p11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/reg_et11"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/rr_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Si"
                android:textColor="#545454"
                android:layout_marginLeft="75dp"
                />
            <RadioButton android:id="@+id/rr_2"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="#545454"
                android:layout_height="wrap_content"
                android:text="No"
                />
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFF"
            android:layout_gravity="center"
            android:textColor="#545454"
            android:textSize="15sp"
            android:id="@+id/button_guardar"
            android:text="Continuar"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

</ScrollView>
